--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
     "prettier:format": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-avatar": "^1.1.3",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -20,7 +22,6 @@
     "next": "15.1.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-icons": "^5.4.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
