--- a/service/package.json
+++ b/service/package.json
@@ -31,6 +31,7 @@
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.0",
     "@nestjs/sequelize": "^11.0.0",
+    "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.0.4",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -52,6 +53,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
     "@types/sequelize": "^4.28.20",
     "@types/supertest": "^6.0.0",
