--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
+    "embla-carousel-autoplay": "^8.5.2",
+    "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
