--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "embla-carousel-react": "^8.5.2",
     "formik": "^2.4.6",
     "lucide-react": "^0.475.0",
+    "moment-timezone": "^0.5.47",
     "next": "15.1.7",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
