--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -35,3 +35,31 @@ jobs:
       - name: Run unit tests
         run: npm test
         working-directory: ./service
+
+  e2e:
+    name: E2E Tests
+    runs-on: ubuntu-latest
+    needs: test # Runs only after unit tests pass
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: npm
+          cache-dependency-path: ./app/package-lock.json
+
+      - name: Install dependencies
+        run: npm ci
+        working-directory: ./app
+
+      - name: Run Cypress tests (Headless)
+        uses: cypress-io/github-action@v6
+        with:
+          working-directory: ./app
+          start: npm run dev
+          wait-on: "http://localhost:3000"
+          browser: chrome
