--- a/app/package.json
+++ b/app/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier:format": "prettier --write ."
+    "prettier:format": "prettier --write .",
+    "cypress:run": "cypress run --headless --browser chrome"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.3",
@@ -37,6 +38,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cypress": "^14.0.3",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
